src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <label>Billing Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Strike</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Service_Name__c</fullName>
        <label>Client Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IO__c</fullName>
        <label>IO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strike_Id__c</fullName>
        <label>Strike Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                    <isActive>false</isActive>
                    <label>Month</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Xero_Contact_Name__c</fullName>
        <label>Xero Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Entity</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Id__c</fullName>
        <externalId>true</externalId>
        <label>Xero Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Id__c</fullName>
        <externalId>true</externalId>
        <label>Xero Invoice Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Name__c</fullName>
        <label>Xero Invoice Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice__c</fullName>
        <formula>IF(!ISBLANK(Xero_Invoice_Id__c),
	HYPERLINK(&quot;https://go.xero.com/AccountsReceivable/Edit.aspx?InvoiceID=&quot;&amp;Xero_Invoice_Id__c, IF(!ISBLANK(Xero_Invoice_Name__c),Xero_Invoice_Name__c,&quot;View&quot;)),
	&quot;Not Available&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xero Invoice</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Xero_Invoice_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Contract__c</columns>
        <columns>Strike_Id__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Checked__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Client_Service_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2020</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>lessThan</operation>
            <value>2/1/2021</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Month</fullName>
        <columns>Xero_Invoice_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Contract__c</columns>
        <columns>Strike_Id__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Client_Service_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>Xero_Invoice_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Brand_Name__c</columns>
        <columns>Contract__c</columns>
        <columns>Strike_Id__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Client_Service_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>